<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dacopancm.photoword.views.EditWordActivity" >

    <item
        android:id="@+id/menu_cancel"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_cancel"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_del"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_del"
        app:showAsAction="ifRoom|withText"/>

</menu>